add hasText to wmg

--- a/data/projects.json
+++ b/data/projects.json
@@ -40,6 +40,7 @@
     "title": "When Melodies Gather",
     "filename": "when-melodies-gather.html",
     "thumbUrl": "./assets/wmg.jpg",
+    "hasText": true,
     "embed": {
       "id": "wmg",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmg.wacz",
