update cts: using new patched cts2 wacz file

--- a/data/projects.json
+++ b/data/projects.json
@@ -56,8 +56,8 @@
     "thumbUrl": "./assets/cts.jpg",
     "hasText": true,
     "embed": {
-      "id": "cts",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/cts.wacz",
+      "id": "cts2",
+      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/cts2.wacz",
       "config": {"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "http://constructingthesacred.supdigital.org/cts/introduction",
