update to replayweb.page 1.4.3-beta.1, add auto-live-redirect for cts

--- a/data/projects.json
+++ b/data/projects.json
@@ -58,7 +58,7 @@
     "embed": {
       "id": "cts2",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/cts2.wacz",
-      "config": {"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
+      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "http://constructingthesacred.supdigital.org/cts/introduction",
       "ts": "20200720015059"
