--- a/data/projects.json
+++ b/data/projects.json
@@ -6,6 +6,7 @@
     "embed": {
       "id": "etd",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/etd.wacz",
+      "config": {"liveRedirectOnNotFound": true},
       "url": "http://enchantingthedesert.com/console/",
       "ts": "20170706223633"
     }
@@ -17,7 +18,7 @@
     "embed": {
       "id": "fr",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fr.wacz",
-      "config": {"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]},
+      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]},
       "url": "https://filmingrevolution.supdigital.org/",
       "ts": "20200511161857"
     }
@@ -30,7 +31,7 @@
     "embed": {
       "id": "bq",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bq.wacz",
-      "config": {"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
+      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "http://blackquotidian.supdigital.org/bq/overview",
       "ts": "20200718001012"
@@ -44,7 +45,7 @@
     "embed": {
       "id": "wmg",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmg.wacz",
-      "config": {"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
+      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "http://whenmelodiesgather.supdigital.org/wmg/introductory-page",
       "ts": "20200719033645"
@@ -85,7 +86,7 @@
     "embed": {
       "id": "fa",
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fa.wacz",
-      "config": {"fuzzy": [["(https:\/\/feralatlas.supdigital.org/).*", "$1"]]},
+      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https:\/\/feralatlas.supdigital.org/).*", "$1"]]},
       "deepLink": true,
       "url": "https://feralatlas.supdigital.org/",
       "ts": "20210416010824"
