--- a/data/projects.json
+++ b/data/projects.json
@@ -81,7 +81,7 @@
       "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/tcd2.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["http:\/\/a.tile.openstreetmap.org\/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?:\/\/[bc].tiles.wmflabs.org\/(.*)", "http://a.tiles.wmflabs.org/$1"]]},
       "deepLink": true,
-      "url": "https://chinesedeathscape.supdigital.org/",
+      "url": "http://chinesedeathscape.supdigital.org/",
       "ts": "202006025095310"
     }
   },
