--- a/data/projects.json
+++ b/data/projects.json
@@ -6,7 +6,7 @@
     "thumbUrl": "./assets/etd.jpg",
     "embed": {
       "id": "etd",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/etd.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:pj930vw7523/etd.wacz",
       "config": {"liveRedirectOnNotFound": true},
       "url": "http://enchantingthedesert.com/console/",
       "ts": "20170706223633"
@@ -19,7 +19,7 @@
     "thumbUrl": "./assets/fr.jpg",
     "embed": {
       "id": "fr",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fr.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:kv106fw2233/fr.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]},
       "url": "https://filmingrevolution.supdigital.org/",
       "ts": "20200511161857"
@@ -33,7 +33,7 @@
     "hasText": true,
     "embed": {
       "id": "bq",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bq.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:rq867gk6622/bq.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "http://blackquotidian.supdigital.org/bq/overview",
@@ -48,7 +48,7 @@
     "hasText": true,
     "embed": {
       "id": "wmg",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmg.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:yg504wh6319/yg504wh6319_wmg.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "http://whenmelodiesgather.supdigital.org/wmg/introductory-page",
@@ -63,7 +63,7 @@
     "hasText": true,
     "embed": {
       "id": "cts2",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/cts2.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:yj995wy0505/cts.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"], ["http:\/\/.*external[?]link=(http[^&]+)&.*$", "$1"]]},
       "deepLink": true,
       "url": "http://constructingthesacred.supdigital.org/cts/introduction",
@@ -78,7 +78,7 @@
     "hasText": true,
     "embed": {
       "id": "tcd",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/tcd2.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:pg355vp4268/tcd2.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["http:\/\/a.tile.openstreetmap.org\/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?:\/\/[bc].tiles.wmflabs.org\/(.*)", "http://a.tiles.wmflabs.org/$1"]]},
       "deepLink": true,
       "url": "http://chinesedeathscape.supdigital.org/",
@@ -92,7 +92,7 @@
     "thumbUrl": "./assets/fa.jpg",
     "embed": {
       "id": "fa",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fa.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:qj089fs5316/fa.wacz",
       "config": {"liveRedirectOnNotFound": false, "fuzzy": [["(https:\/\/feralatlas.supdigital.org/).*", "$1"]]},
       "deepLink": true,
       "url": "https://feralatlas.supdigital.org/",
@@ -107,7 +107,7 @@
     "hasText": true,
     "embed": {
       "id": "sp",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/sp-v2.wacz",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:jy040sq1372/sp.wacz",
       "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "https://shadow-plays.supdigital.org/sp/toc",
@@ -123,7 +123,7 @@
     "embed": {
       "id": "ll",
       "sourceUrl": "https://stacks.stanford.edu/file/druid:jm374kc0685/ll.wacz",
-      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https://layeredlives.supdigital.org/).*", "$1"]]},
+      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https:\/\/layeredlives.supdigital.org/).*", "$1"]]},
       "deepLink": true,
       "url": "https://layeredlives.supdigital.org",
       "ts": "20230207002827"
@@ -137,14 +137,14 @@
     "hasText": false,
     "embed": {
       "id": "tm",
-      "sourceUrl": "https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/transmedia-stories.wacz",
-      "config": {"liveRedirectOnNotFound": true, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:jf302kz7177/ts.wacz",
+      "config": {"liveRedirectOnNotFound": false, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
       "deepLink": true,
       "url": "https://transmediastories.supdigital.org/ts/custom-contents",
       "ts": "20230816035522"
     }
   },
-    {
+   {
     "title": "America's Public Bible",
     "author": "Lincoln Mullen",
     "filename": "americas-public-bible.html",
@@ -188,6 +188,21 @@
       "url": "https://countryofwords.supdigital.org",
       "ts": "20240703161200"
     }
-  }     
+  },
+    {
+    "title": "2020 Dreams",
+    "author": "Maja Gutman Mušič and Kelly Bulkeley with Sheldon Juncker, Dan Kennedy, Gez Quinn, and Jennifer Marie Lane",
+    "filename": "2020-dreams.html",
+    "thumbUrl": "./assets/2d.jpg",
+    "hasText": false,
+    "embed": {
+      "id": "2d",
+      "sourceUrl": "https://stacks.stanford.edu/file/druid:yh739tk2490/2d.wacz",
+      "config": {"liveRedirectOnNotFound": false, "fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]},
+      "deepLink": true,
+      "url": "https://2020dreams.supdigital.org/2d/contents",
+      "ts": "20240801141900"
+    }
+  }
   ]
 }
